--- a/FMI_Parking_System/frontend/login/css/login_form_styles.css
+++ b/FMI_Parking_System/frontend/login/css/login_form_styles.css
@@ -1,104 +1,127 @@
-/* import Roboto font */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
+
+* {
+	box-sizing: border-box;
+}
 
 body {
-    margin: 0;
-    box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
-
-    /* color variables, used later in the code */
-    --fontFrom: #65dfc9;
-    --fontTo: #6cdbeb;
-    --loginFrom: rgba(255, 255, 255, 0.7);
-    --loginTo: rgba(255, 255, 255, 0.3);
-    --loginShadow: rgba(255, 255, 255, 0.9);
+	background: #f6f5f7;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	font-family: 'Montserrat', sans-serif;
+	height: 100vh;
+	margin: -20px 0 50px;
 }
 
-main {
-    min-height: 100vh;
-    background: linear-gradient(to right top, var(--fontFrom), var(--fontTo));
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+h1 {
+	font-weight: bold;
+	margin: 0;
+    margin-bottom: 3vh;
 }
 
-input {
-    border-radius: 1rem;
-    border: none;
-
-    box-shadow: 0 0 1rem var(--loginFrom);
-    outline: none;
+h2 {
+	text-align: center;
 }
 
-/* log in page header */
-
-#system-name-header {
-    margin-top: 0;
+p {
+	font-size: 14px;
+	font-weight: 100;
+	line-height: 20px;
+	letter-spacing: 0.5px;
+	margin: 20px 0 30px;
 }
 
-/* log in form */
-
-#login-form {
-    min-width: 490px;
-    max-width: 490px;
-    padding: 2rem;
-    background: linear-gradient(to right bottom, var(--loginFrom), var(--loginTo));
-    box-shadow: 0 0 2rem var(--loginShadow);
-    border-radius: 2rem;
-
-    font-size: 1.5rem;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+button {
+	border-radius: 20px;
+	border: 1px solid #FF4B2B;
+	background-color: #FF4B2B;
+	color: #FFFFFF;
+	font-size: 12px;
+	font-weight: bold;
+	padding: 12px 45px;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+	transition: transform 80ms ease-in;
+    margin-top: 4vh;
 }
 
-.form-item {
-    width: 100%;
-    margin-bottom: 1rem;
-
-    display: flex;
-    justify-content: space-evenly;
+button:active {
+	transform: scale(0.95);
 }
 
-.button-container {
-    margin-bottom: 0;
+button:focus {
+	outline: none;
 }
 
-.form-item input,button {
-    font-size: 1.5rem;
-    font-family: 'Roboto', sans-serif;
-
-    box-sizing: border-box;
-    padding: 0.5rem 1rem;
-
-    flex-grow: 2;
+button.ghost {
+	background-color: transparent;
+	border-color: #FFFFFF;
 }
 
-.form-item label {
-    flex-grow: 1;
-    
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    margin-right: 1rem;
+form{
+	background-color: #FFFFFF;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	padding: 0 50px;
+	height: 100%;
+	text-align: center;
 }
 
-#login-button {
-    border-radius: 2rem;
-    border: none;
-
-    background: linear-gradient(to right top, var(--fontFrom), var(--fontTo));
+input, .custom-select {
+	background-color: #eee;
+	border: none;
+	padding: 12px 15px;
+	margin: 1vh 0;
+	width: 100%;
 }
 
-#login-button:hover {
-    background: linear-gradient(to left top, var(--fontFrom), var(--fontTo));
-    box-shadow: 0 0 1rem rgba(255, 255, 255, 0.7);
+.container {
+	background-color: #fff;
+	border-radius: 10px;
+  	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
+			0 10px 10px rgba(0,0,0,0.22);
+	position: relative;
+	overflow: hidden;
+	width: 60vw;
+	max-width: 100%;
+	min-height: 480px;
 }
+
+.form-container {
+	position: absolute;
+	top: 0;
+	height: 100%;
+	transition: all 0.6s ease-in-out;
+}
+
+.sign-in-container {
+	left: 0;
+	width: 50%;
+	z-index: 2;
+}
+
+.container.right-panel-active .sign-in-container {
+	transform: translateX(100%);
+}
+
+.sign-up-container {
+	left: 0;
+	width: 50%;
+	opacity: 0;
+	z-index: 1;
+}
+
+.container.right-panel-active .sign-up-container {
+	transform: translateX(100%);
+	opacity: 1;
+	z-index: 5;
+	animation: show 0.6s;
+}
+
 
 #response-message {
     box-sizing: border-box;
@@ -134,34 +157,85 @@ input {
     display: none !important;
 }
 
-/* to registration page button */
-
-#to-registration-btn {
-    flex: 0 0 100%;
-
-    min-width: 490px;
-    max-width: 490px;
-    margin-top: 4vh;
-
-    border: none;
-    border-radius: 2rem;
-
-    background: linear-gradient(to right bottom, var(--loginFrom), var(--loginTo));
-    box-shadow: 0 0 1rem var(--loginShadow);
+#to-registration-btn button{
+	background-color: #f6f5f7;
+	color: #f6f5f7;
+}
+@keyframes show {
+	0%, 49.99% {
+		opacity: 0;
+		z-index: 1;
+	}
+	
+	50%, 100% {
+		opacity: 1;
+		z-index: 5;
+	}
 }
 
-#to-registration-btn:hover {
-    box-shadow: 0 0 2rem var(--loginShadow);
+.overlay-container {
+	position: absolute;
+	top: 0;
+	left: 50%;
+	width: 50%;
+	height: 100%;
+	overflow: hidden;
+	transition: transform 0.6s ease-in-out;
+	z-index: 100;
 }
 
-@media only screen and (max-width: 615px) {
-    #login-form {
-        min-width: 400px;
-        max-width: 400px;
-    }
+.container.right-panel-active .overlay-container{
+	transform: translateX(-100%);
+}
 
-    #to-registration-btn {
-        min-width: 400px;
-        max-width: 400px;
-    }
+.overlay {
+	background: #FF416C;
+	background: -webkit-linear-gradient(to right, #FF4B2B, #FF416C);
+	background: linear-gradient(to right, #FF4B2B, #FF416C);
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: 0 0;
+	color: #FFFFFF;
+	position: relative;
+	left: -100%;
+	height: 100%;
+	width: 200%;
+  	transform: translateX(0);
+	transition: transform 0.6s ease-in-out;
+}
+
+.container.right-panel-active .overlay {
+  	transform: translateX(50%);
+}
+
+.overlay-panel {
+	position: absolute;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	padding: 0 40px;
+	text-align: center;
+	top: 0;
+	height: 100%;
+	width: 50%;
+	transform: translateX(0);
+	transition: transform 0.6s ease-in-out;
+}
+
+.overlay-left {
+	transform: translateX(-20%);
+}
+
+.container.right-panel-active .overlay-left {
+	transform: translateX(0);
+}
+
+.overlay-right {
+	right: 0;
+	transform: translateX(0);
+}
+
+.container.right-panel-active .overlay-right {
+	transform: translateX(20%);
 }
