--- a/FMI_Parking_System/frontend/map/css/zones - Copy.css
+++ b/FMI_Parking_System/frontend/map/css/zones - Copy.css
@@ -216,10 +216,9 @@ input, select {
 
 #search-form {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-evenly;
+    align-items: initial;
     flex-direction: column;
-
     margin: 1vw 0;
 }
 
@@ -229,8 +228,13 @@ input, select {
 
 #form-inputs {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.form-item{
+    margin-bottom: 4%;
 }
 
 /* Next & previous buttons */
@@ -278,7 +282,7 @@ input, select {
 .text {
     color: #970E53;
 
-    font-size: 20px;
+    font-size: 25px;
     font-family: 'Montserrat', sans-serif;
     padding: 8px 12px;
     bottom: 8px;
@@ -316,7 +320,7 @@ input, select {
 .btn, .search-btn {
     cursor: pointer;
 
-    width: 12%;
+    width: 25%;
     max-width: 155px;
 
     display: inline-block;
@@ -326,6 +330,7 @@ input, select {
 
 .search-btn {
     margin-left: 0.8rem;
+    width: 40%;
 }
 
 #back-btn {
@@ -631,3 +636,28 @@ input, select {
     color: white;
     border-bottom-right-radius: 1rem;
 }
+
+.left-right-wrapper{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.left{
+    display: inline-block;
+    width: 60%;
+    padding: 0%;
+    background-color: linear-gradient(to right top, #ffa190, #ff9bb3);
+}
+
+.right{
+    display: inline-block;
+    width: 40%;
+    /* border: 1px solid #970E53; */
+    /* padding: 2%; */
+    /* align-items: left; */
+}
+    .interval-wrapper{
+ display: flex;
+ flex-direction: row;
+    }
