save slot by clicking image
lecturer_only column in users table needed

--- a/FMI_Parking_System/frontend/map/css/zones - Copy.css
+++ b/FMI_Parking_System/frontend/map/css/zones - Copy.css
@@ -60,6 +60,7 @@ select {
 .space {
     position: absolute;
     background-color: #D2B2ADFF;
+    /* background-color: #5BC76A; */
     cursor: pointer;
 }
 
