--- a/FMI_Parking_System/frontend/account/css/account_view_styles.css
+++ b/FMI_Parking_System/frontend/account/css/account_view_styles.css
@@ -1,296 +1,215 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
 
 body {
-    margin: 0;
-    box-sizing: border-box;
-    font-family: 'Montserrat', sans-serif;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: 'Montserrat', sans-serif;
 
-    /* color variables used later in the code */
-    --backgroundGradient1: #ffa190;
-    --backgroundGradient2: #ff9bb3;
-    --fontFrom: #fa7d67;
-    --fontTo: #ff7595;
-    --headerColor: #000000;
-    --accountColorFrom: rgba(255, 255, 255, 0.7);
-    --accountColorTo: rgba(255, 255, 255, 0.3);
-    --glassCircleColorFrom: rgba(255, 255, 255, 0.6);
-    --glassCircleColorTo: rgba(255, 255, 255, 0.2);
-    --scheduleShadow: rgba(122, 122, 122, 0.212);
-    --scheduleBackground: rgba(255, 255, 255, 0.4);
-    --optionHoverColor: rgba(255, 255, 255, 0.8);
+  /* color variables used later in the code */
+  --backgroundGradient1: #ffa190;
+  --backgroundGradient2: #ff9bb3;
+  --fontFrom: #fa7d67;
+  --fontTo: #ff7595;
+  --headerColor: #000000;
+  --accountColorFrom: rgba(255, 255, 255, 0.7);
+  --accountColorTo: rgba(255, 255, 255, 0.3);
+  --glassCircleColorFrom: rgba(255, 255, 255, 0.6);
+  --glassCircleColorTo: rgba(255, 255, 255, 0.2);
+  --scheduleShadow: rgba(122, 122, 122, 0.212);
+  --scheduleBackground: rgba(255, 255, 255, 0.4);
+  --optionHoverColor: rgba(255, 255, 255, 0.8);
 }
 
 main {
-    min-height: 100vh;
-    background: linear-gradient(to right bottom, var(--backgroundGradient1), var(--backgroundGradient2));
+  min-height: 100vh;
+  background: linear-gradient(to right bottom, var(--backgroundGradient1), var(--backgroundGradient2));
 }
 
 h3 {
-    margin: 0;
-    color: var(--headerColor);
-    text-align: center;
-    font-size: medium;
+  margin: 0;
+  color: var(--headerColor);
+  text-align: center;
+  font-size: medium;
 }
 
 p {
-    margin: 0;
+  margin: 0;
 }
 
 h4 {
-    margin: 0;
+  margin: 0;
 }
 
 input,
 button {
-    font-weight: bold;
-    font-family: 'Montserrat', sans-serif;
+  font-weight: bold;
+  font-family: 'Montserrat', sans-serif;
 }
 
 
 /* account tab */
 #account-tab {
-    width: 100%;
-    position: absolute;
-    display: block;
-    justify-content: space-between;
+  width: 100%;
+  position: absolute;
+  display: block;
+  justify-content: space-between;
 }
 
-/* 
---!--------------------------------
-!! Да се изтрие ако не трябва
---!--------------------------------
-*/
-
-/* glass circles */
-
-/* .glass-circle {
-    display: inline-block;
-    border-radius: 50%;
-
-    width: 15vw;
-    height: 27vh;
-
-    //make each glass circle appear behind the account tab
-       no need of 'position: relative' to use z-index because we get 'position: absolute' from each glass circle's id definitions 
-    z-index: 1;
-} */
-
-/* #bottom-glass-circle {
-     //position the circle at the bottom left corner of the account tab 
-    position: absolute;
-    bottom: 3vh;
-    left: 14vw;
-
-    background: linear-gradient(to left bottom, var(--glassCircleColorFrom), var(--glassCircleColorTo));
-} */
-
-/* #top-glass-circle {
-    //position the circle at the top right corner of the account tab 
-    position: absolute;
-    top: 3vh;
-    right: 14vw;
-
-    background: linear-gradient(to right top, var(--glassCircleColorFrom), var(--glassCircleColorTo));
-} */
-
-/* navbar */
-
 #options-menu {
-    /* make the options tab take up 30% of the account tab's space with no growing and shrinking */
-    flex: 1 0 30%;
-    border-radius: 0;
-    background: linear-gradient(to top left, var(--accountColorTo), var(--accountColorFrom));
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
+  /* make the options tab take up 30% of the account tab's space with no growing and shrinking */
+  flex: 1 0 30%;
+  border-radius: 0;
+  background: linear-gradient(to top left, var(--accountColorTo), var(--accountColorFrom));
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
 }
 
 .option {
-    /* take up all the option menu's width */
-    width: 100%;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-grow: 1;
-    margin-right: 1rem;
-    border-radius: 1rem;
+  /* take up all the option menu's width */
+  width: 100%;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
+  margin-right: 1rem;
+  border-radius: 1rem;
 }
 
 .option:hover {
-    background: var(--optionHoverColor);
-    /* make the background transition 1 second */
-    transition: 1s;
+  background: var(--optionHoverColor);
+  /* make the background transition 1 second */
+  transition: 1s;
 }
 
 /* the logo of the system */
 .non-option {
-    width: 80%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-grow: 1;
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
 }
 
 .non-option img {
-    width: 40%;
-    padding: 1em;
+  width: 40%;
+  padding: 1em;
 }
 
-
-/* 
---!--------------------------------
-!! Да се изтрие ако не трябва
---!--------------------------------
-*/
-
-/* #system-name {
-    max-width: 70%;
-    text-align: center;
-} */
-
-/* all tabs next to navbar */
-
-/* .right-tab {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    
-    max-width: 65%;
-} */
 
 /* my account tab */
 #account-tab>section {
-    margin: auto;
-    border-radius: 50px;
-    width: 70%;
-    background: linear-gradient(to right bottom, var(--accountColorFrom), var(--accountColorTo));
-    display: block;
-    padding: 2%;
-    text-align: center;
-    margin-top: 3%;
+  margin: auto;
+  border-radius: 50px;
+  width: 70%;
+  background: linear-gradient(to right bottom, var(--accountColorFrom), var(--accountColorTo));
+  display: block;
+  padding: 2%;
+  text-align: center;
+  margin-top: 3%;
 }
 
-
-/* 
---!--------------------------------
-!! Да се изтрие ако не трябва
---!--------------------------------
-*/
-
-
-/* #my-account-section { */
-/* make my account section cover 80% with no growing and shrinking */
-/* flex: 1 0 20%; */
-
-/* moved to #account-tab > section */
-/* margin: auto;
-    border-radius: 50px;
-    width: 70%;
-    min-height: 50vh; */
-/* } */
-
 #my-account-header {
-    flex-grow: 0;
+  flex-grow: 0;
 
-    text-transform: uppercase;
-    font-size: 1.2rem;
+  text-transform: uppercase;
+  font-size: 1.2rem;
 }
 
 #account-details {
-    /* width: 80%; */
-    /* flex-grow: 1;
+  /* width: 80%; */
+  /* flex-grow: 1;
     
     flex-direction: column;
     margin: auto; */
-    display: flex;
+  display: flex;
 }
 
 #account-details p {
-    margin: 0.5rem;
+  margin: 0.5rem;
 }
 
 .user-info {
-    display: inline-block;
-    width: 50%;
-    /* text-align: left; */
+  display: inline-block;
+  width: 50%;
+  /* text-align: left; */
 }
 
 .schedule-wrapper {
-    display: inline-block;
-    width: 49%;
+  display: inline-block;
+  width: 49%;
 }
 
 #user-picture {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 #user-picture img {
-    width: 20%;
-    flex-grow: 0;
+  width: 20%;
+  flex-grow: 0;
 }
 
 #qrcode {
-    text-align: -webkit-center;
+  text-align: -webkit-center;
 }
 
 .schedule {
-    /* align the schedule tab at the center */
-    align-self: center;
+  /* align the schedule tab at the center */
+  align-self: center;
 
-    /* width: 80%; */
-    height: 38%;
+  /* width: 80%; */
+  height: 38%;
 
-    box-sizing: border-box;
-    overflow-y: auto;
-    padding: 1rem;
-    margin: 1rem 0;
+  box-sizing: border-box;
+  overflow-y: auto;
+  padding: 1rem;
+  margin: 1rem 0;
 
-    border-radius: 0.5rem;
-    box-shadow: 6px 6px 20px var(--scheduleShadow);
-    background: var(--scheduleBackground);
+  border-radius: 0.5rem;
+  box-shadow: 6px 6px 20px var(--scheduleShadow);
+  background: var(--scheduleBackground);
 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .schedule ul {
-    padding: 0;
+  padding: 0;
 
-    list-style-type: none;
-    text-align: center;
+  list-style-type: none;
+  text-align: center;
 }
 
 .schedule h4 {
-    margin: 0;
+  margin: 0;
 }
 
 .no-display {
-    display: none !important;
+  display: none !important;
 }
 
 /* parking zone map tab */
 
 #parking-zones-section {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 #parking-zones-section img {
-    width: 90%;
-    height: 80%;
+  width: 90%;
+  height: 80%;
 
-    cursor: zoom-in;
+  cursor: zoom-in;
 
-    box-shadow: 1rem 1rem .5rem var(--scheduleShadow);
-    border-radius: 0.5rem;
+  box-shadow: 1rem 1rem .5rem var(--scheduleShadow);
+  border-radius: 0.5rem;
 }
 
 
@@ -301,278 +220,220 @@ button {
 */
 
 .zoom-in-effect {
-    cursor: zoom-out !important;
+  cursor: zoom-out !important;
 
-    /* translate the image to the left and scale it so that it gets bigger when pressed (zooming effect) */
-    transform: translateX(-9rem) scale(2, 2);
+  /* translate the image to the left and scale it so that it gets bigger when pressed (zooming effect) */
+  transform: translateX(-9rem) scale(2, 2);
 
-    /* make transform do its job for 1 second */
-    transition: transform 1s;
+  /* make transform do its job for 1 second */
+  transition: transform 1s;
 }
 
 .zoom-out-effect {
-    /* when the user clicks on the zoomed image, zoom it out (just scale it back to normal) 
+  /* when the user clicks on the zoomed image, zoom it out (just scale it back to normal) 
        this definition is used because we want to make the animation a bit slower
        because by default it does it immediately when class zoom-in-effect is removed */
-    transform: scale(1, 1);
+  transform: scale(1, 1);
 
-    /* make transform do its job for 1 second */
-    transition: transform 1s;
+  /* make transform do its job for 1 second */
+  transition: transform 1s;
 }
 
 /* upload shchedules tab */
 
 #my-schedule-section {
-    /* display: flex; is removed by some reason */
-    display: flex;
-    align-items: center;
-    /* font-size: 1.5rem;
-    flex: 1 0 70%;
-    justify-content: flex-start; */
-    /* width: 80%;
-    margin: auto;
-    margin-top: 5%;
-    border-radius: 20px; */
-
+  display: flex;
+  align-items: center;
+  font-size: 1.5rem;
+  flex: 1 0 70%;
+  justify-content: flex-start;
+  width: 80%;
+  margin: auto;
+  margin-top: 5%;
+  border-radius: 20px;
 }
 
-#upload-file-section {
-    flex: 1 0 70%;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+#upload-file-section,
+#schedule-section,
+#slots-section {
+  flex: 1 0 70%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 #upload-file-form {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 #upload-file-form label {
-    font-weight: bolder;
+  font-weight: bolder;
 }
 
 #upload-file-form>*:not(:last-child) {
-    margin-bottom: 1rem;
+  margin-bottom: 1rem;
 }
 
 #csv {
-    max-width: 65%;
-    flex: 1 0 20%;
+  max-width: 65%;
+  flex: 1 0 20%;
 }
 
 input[type=file] {
-    font-size: 1.5rem;
+  font-size: 1.5rem;
 }
 
 .button-section-wrapper {
-    display: inline-block;
-    width: 50%;
+  display: inline-block;
+  width: 52%;
 }
 
 #button-section {
-    /* display: flex;
-    justify-content: space-evenly;
-
-    padding-top: 2rem;
-    flex: 1 0 -5%; */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  flex: 1 0 -5%;
+  align-items: center;
 }
 
 .button-style {
 
-    border-radius: 1rem;
-    border: none;
-    margin: 1rem 0.5rem;
-    background: linear-gradient(to right top, var(--fontFrom), var(--fontTo));
+  border-radius: 1rem;
+  border: none;
+  margin: 1rem 0.5rem;
+  background: linear-gradient(to right top, var(--fontFrom), var(--fontTo));
 
-    padding: 1rem;
-    font-size: 1.2rem;
+  padding: 1rem;
+  font-size: 1.2rem;
 
-    width: 60%;
-    height: 100%;
+  width: 60%;
+  height: 100%;
 
-    filter: brightness(90%);
-    cursor: pointer;
+  filter: brightness(90%);
+  cursor: pointer;
 }
 
 .schedule-data-section {
-    display: inline-block;
-    width: 49%;
+  display: inline-block;
+  width: 46%;
 }
 
 .button-style:hover {
-    background: linear-gradient(to left top, var(--fontFrom), var(--fontTo));
-    box-shadow: 0 0 1rem var(--accountColorFrom);
-    filter: brightness(95%);
+  background: linear-gradient(to left top, var(--fontFrom), var(--fontTo));
+  box-shadow: 0 0 1rem var(--accountColorFrom);
+  filter: brightness(95%);
 }
 
 .active {
-    filter: brightness(110%);
+  filter: brightness(110%);
 }
 
 .active:hover {
-    filter: brightness(110%) !important;
+  filter: brightness(110%) !important;
 }
 
 .inactive {
-    cursor: unset;
-    filter: brightness(60%) !important;
+  cursor: unset;
+  filter: brightness(60%) !important;
 }
 
 .inactive:hover {
-    filter: brightness(60%);
-    box-shadow: unset;
-    background: linear-gradient(to right top, var(--fontFrom), var(--fontTo));
+  filter: brightness(60%);
+  box-shadow: unset;
+  background: linear-gradient(to right top, var(--fontFrom), var(--fontTo));
 }
 
 #upload-response {
-    display: none;
+  display: none;
 
-    position: absolute;
-    left: 45%;
-    width: 40%;
-    z-index: 4;
+  position: absolute;
+  left: 45%;
+  width: 40%;
+  z-index: 4;
 
-    padding: 1rem;
+  padding: 1rem;
 
-    color: white;
-    text-align: center;
+  color: white;
+  text-align: center;
 }
 
 .error {
-    display: block !important;
+  display: block !important;
 
-    background-color: rgb(255, 77, 77);
-    box-shadow: 0 0 1rem rgba(255, 77, 77, 0.7);
+  background-color: rgb(255, 77, 77);
+  box-shadow: 0 0 1rem rgba(255, 77, 77, 0.7);
 }
 
 .success {
-    display: block !important;
+  display: block !important;
 
-    background-color: rgb(71, 209, 71);
-    box-shadow: 0 0 1rem rgba(71, 209, 71, 0.7);
+  background-color: rgb(71, 209, 71);
+  box-shadow: 0 0 1rem rgba(71, 209, 71, 0.7);
 }
 
 .show-popup {
-    -webkit-animation: fadeIn-Out 4s;
-    /* Chrome and Safari */
-    -moz-animation: fadeIn-Out 4s;
-    /* Mozilla */
-    animation: fadeIn-Out 4s;
+  -webkit-animation: fadeIn-Out 4s;
+  /* Chrome and Safari */
+  -moz-animation: fadeIn-Out 4s;
+  /* Mozilla */
+  animation: fadeIn-Out 4s;
 }
 
 /* 37,5% to 62.5% creates a pause and then the message disappears */
 @-moz-keyframes fadeIn-Out {
-    0% {
-        opacity: 0;
-    }
+  0% {
+    opacity: 0;
+  }
 
-    37.5% {
-        opacity: 1;
-    }
+  37.5% {
+    opacity: 1;
+  }
 
-    62.5% {
-        opacity: 1;
-    }
+  62.5% {
+    opacity: 1;
+  }
 
-    100% {
-        opacity: 0;
-    }
+  100% {
+    opacity: 0;
+  }
 }
 
 @-webkit-keyframes fadeIn-Out {
-    0% {
-        opacity: 0;
-    }
+  0% {
+    opacity: 0;
+  }
 
-    37.5% {
-        opacity: 1;
-    }
+  37.5% {
+    opacity: 1;
+  }
 
-    62.5% {
-        opacity: 1;
-    }
+  62.5% {
+    opacity: 1;
+  }
 
-    100% {
-        opacity: 0;
-    }
+  100% {
+    opacity: 0;
+  }
 }
 
 @keyframes fadeIn-Out {
-    0% {
-        opacity: 0;
-    }
+  0% {
+    opacity: 0;
+  }
 
-    37.5% {
-        opacity: 1;
-    }
+  37.5% {
+    opacity: 1;
+  }
 
-    62.5% {
-        opacity: 1;
-    }
+  62.5% {
+    opacity: 1;
+  }
 
-    100% {
-        opacity: 0;
-    }
+  100% {
+    opacity: 0;
+  }
 }
-
-/* #schedule-section, #slots-section {
-    padding: 1rem;
-    flex: 1 0 70%;
-
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-
-    max-height: 78%;
-}
-
-#schedule-section header, #slots-section header {
-    flex: 1 0 -5%;
-    text-align: center;
-    margin-bottom: 0.5rem;
-}
-
-#upcoming-schedule, #taken-slots {
-    overflow-y: auto;
-    flex: 1 0 75%;
-}
-
-.schedule-item {
-    overflow-y: auto;
-    height: 20%;
-    width: 35vw;
-    font-size: 1.2rem;
-    box-shadow: unset;
-    border-radius: unset;
-}
-
-.schedule-item:first-child {
-    margin-top: 0;
-}
-
-.schedule-item:last-child {
-    margin-bottom: 0;
-}
-
-.schedule-item span {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
-
-.schedule-item span:first-child {
-    flex: 1 0 50%;
-}
-
-.schedule-item span:last-child {
-    flex: 1 0 50%;
-} */
